<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/home_page_text"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:id="@+id/textTitle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btnNavTP1"
        android:text="@string/go_to_tp_1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNavTP1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btnNavTP2"
        android:text="@string/go_to_tp_2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNavTP2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btnNavTP3"
        android:text="@string/go_to_tp_3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNavTP3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btnNavTP4"
        android:text="@string/go_to_tp_4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNavTP4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btnNavTP5"
        android:text="@string/go_to_tp_5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNavTP5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btnNavTP6"
        android:text="@string/go_to_tp_6"/>

</RelativeLayout>